Update render.yaml with rootDirectory for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -3,19 +3,21 @@ services:
   - type: web
     name: tourism-backend
     env: python
-    buildCommand: "cd backend && pip install -r requirements.txt"
-    startCommand: "cd backend && python src/main.py"
+    rootDirectory: backend
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python src/main.py"
     envVars:
       - key: FLASK_ENV
         value: production
       - key: DATABASE_URL
         generateValue: true
-    
-  # Frontend Service  
+
+  # Frontend Service
   - type: static
     name: tourism-frontend
-    buildCommand: "cd frontend && pnpm install && pnpm run build"
-    staticPublishPath: frontend/dist
+    rootDirectory: frontend
+    buildCommand: "pnpm install && pnpm run build"
+    staticPublishPath: dist
     envVars:
       - key: VITE_API_URL
         fromService:
